--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ body {
 
 /* Game 1 の背景 */
 .game1 {
-  background-image: url("/images/0to100.png");
+  background-image: url("/images/image.png");
 }
 
 /* Game 2 の背景 */
